<resources>
    <string name="app_name">TMS</string>
    <string name="reservation_mobile_no">Mobile No</string>
    <string name="reservation_name">Name</string>
    <string name="reservation_no_of_people">No of People</string>
    <string name="reservation_email_id">Email Id</string>
    <string name="reservation_special_requirement">Specific Requirement</string>
    <string name="reservation_waiting_list">Waiting List</string>
    <string name="reservation_status_waiting">Waiting</string>

    <string name="table_no">Table No</string>
    <string name="capacity">Seating Capacity</string>
    <string name="floor_no">Floor No</string>
    <string name="seating_capacity">Seating Capacity</string>
    <string name="row">Row</string>
    <string name="column">Column</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="done">Done</string>
    <string name="total_table">Total Table</string>
    <string name="table_left">Table Left</string>
    <string name="fill_the_floor">Fill the floor with tables</string>
    <string name="table_status">Table Status</string>
    <string name="reserve">RESERVE</string>


    <string name="dashboard">Dashboard</string>
    <string name="table_percentage_chart">Table Percentage Chart</string>
    <string name="addReservation">Add Reservation</string>
    <string name="total_capacity">Total Capacity</string>
    <string name="capacity_occupied">Capacity Occupied</string>
    <string name="capacity_left">Capacity Left</string>
    <string name="total_reservations">Total Reservations</string>
    <string name="reservations_completed">Reservations Completed</string>
    <string name="reservations_left">Reservations Left</string>
    <string name="top_reservation">Top Reservation</string>
    <string name="group">Group</string>
    <string name="status">Status</string>
    <string name="action">Action</string>


    //Errors
    <string name="required">Required</string>

    //Toast message
    <string name="toast_message_for_radio_button">Select one of the following options: Add or Delete</string>

    <string name="dataStoreKey">reservationMobileNo</string>
    <string name="dataStoreName">tms</string>
    <string name="reservationform">Reservation Form</string>
    <string name="reservation_assign_table">Assign Table</string>
    <string name="table_Occupied">Table Occupied</string>
    <string name="success">Success!</string>
    <string name="table_reserve">Your table has been reserve</string>
    <string name="go_to_dashboard">Go to dashboard</string>
    <string name="viewAll">View all</string>


</resources>