<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.ReservationController"
    android:layout_margin="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservation_mobile_no"
        />

    <EditText
        android:id="@+id/reservation_mobile_no"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservation_name"
        />

    <EditText
        android:id="@+id/reservation_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservation_no_of_people"
        />


    <EditText
        android:id="@+id/reservation_group"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservation_email_id"
        />


    <EditText
        android:id="@+id/reservation_email_id"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservation_special_requirement"
        />


    <EditText
        android:id="@+id/reservation_requirements"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        />

    <Button
        android:id="@+id/add_reservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservation_waiting_list"/>
</LinearLayout>