<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabinbold"
        android:text="@string/floor_no"
        android:textColor="#848484"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_floor_no"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/cabinbold"
            android:text="@string/row"

            android:textColor="#848484"
            android:textSize="20sp" />
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:fontFamily="@font/cabinbold"
            android:text="@string/column"
            android:textColor="#848484"
            android:textSize="20sp" />
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/row_floor"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/spinner_background"
            android:paddingStart="15dp"
            android:textColor="#171515"
            android:textSize="20sp"
            tools:listitem="@layout/spinner_item" />


        <Spinner
            android:id="@+id/column_floor"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/spinner_background"
            android:paddingStart="15dp"
            android:textColor="#171515"
            android:textSize="20sp"
            tools:listitem="@layout/spinner_item" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/floor_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/floor_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabinbold"
            android:text="@string/add"
            android:textColor="#848484"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/floor_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabinbold"
            android:text="@string/delete"
            android:textColor="#848484"
            android:textSize="20sp" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/add_tables_to_floor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabinbold"
        android:text="@string/fill_the_floor"
        android:textColor="#848484"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_floor_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/done" />

</LinearLayout>